--- a/res/layout/second.xml
+++ b/res/layout/second.xml
@@ -159,6 +159,8 @@
 	        android:id="@+id/tv_rx"
 	        android:layout_width="wrap_content"
 	        android:layout_height="fill_parent"
+	        android:layout_marginLeft="10dp"
+	        android:layout_marginTop="10dp"
 	        android:textSize="10pt"/>
 	    </LinearLayout>
 	    
